# gemseo-web-study

./: .copier-answers.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  CREDITS.md  README.md  Welcome_to_GEMSEO_study.py  mkdocs.yml  pyproject.toml  requirements.txt  tox.ini
.devcontainer/: devcontainer.json
docs/: credits.md.jinja  licenses.md
pages/: 1_Define_the_disciplines.py  2_Generate_the_N2_diagram.py  3_Generate_the_XDSM_diagram.py  __init__.py
requirements/: check.txt  test-python3.10.txt  test-python3.9.txt
src/gemseo_web_study/: GEMSEO_study.py  Welcome_to_GEMSEO_study.py  application.py
src/gemseo_web_study/pages/: 1_Define_the_disciplines.py  1_Disciplines.py  2_Generate_the_N2_diagram.py  2_N2.py  3_Generate_the_XDSM_diagram.py  3_XDSM.py  __init__.py
